# pancake

./: .gitignore  BUILDING.md  Cargo.toml  README.md  TODO.md  build.rs
installer/: installer.bash
migration/src/: lib.rs
src/: api.rs  cli.rs  config.rs  db.rs  frontend.rs  main.rs  util.rs
src/api/: db.rs  middleware.rs  models.rs  routes.rs  state.rs
src/api/models/: errors.rs  etc.rs  requests.rs  responses.rs
src/api/routes/: auth.rs  users.rs
src/db/: entity.rs
src/db/entity/: api_key.rs  prelude.rs  refresh_token.rs  user.rs
src/frontend/: development.rs  release.rs
web/: README.md  package.json  svelte.config.js  vite.config.ts
web/src/routes/: +page.svelte
